24-12-2012 -- 0.2.0 (beta)
- enable synchronous BSig execution (replacing the asynchronous version)

23-12-2012
- enable BSig executor to send request to itself (localhost) for satisfying an operator's precondition
- fix bugs on start/stop nuri client

21-12-2012 -- 0.2.0 (alpha)
- enable distributed execution, but only tested on a system with 3 nodes

19-12-2012 -- 0.1.4
- from master node, sending BSig model to each client nodes
- on client node, saving the BSig model

18-12-2012 -- 0.1.3
- enable partial-order workflow
- generate BSig model
- modify CLI parameters in 'bin/nuri.rb'
  -c => console
  -p => planner

12-12-2012 -- 0.1.2
- replace mongrel with WEBrick
- disable secure connection due to immature implementations (buggy)

18-11-2012 -- 0.1.1
- implement modules to manage TikiWiki; separated into two modules:
	- Tikiweb -- managing the frontend: installing PHP files, set PHP config
	- Tikidb -- managing the backend: executing SQL to create the database, grant/revoke permissions

12-11-2012
- implement module "Apachelb" -- Apache Load Balancer
- allow Set as argument of procedure

06-11-2012
- first release
- available modules
	- Apache
	- Mysql